<resources>
    <!-- CHANGE THESE STRINGS TO CUSTOMIZE EACH APP -->
    <string name="app_name">Le Ninja</string>
    <string name="feed_url" translatable="false">http://feeds.feedburner.com/leninjablog?format=xml</string>
    <string name="blog_tagline" translatable="false">Bem vindo ao dojô mais lindo da cidade</string>
    <string name="share_publication_text">Vi um post no App do Le Ninja para Android: </string>
    <string name="about_message">App feito de fã para fãs.
        \n\nNão tenho qualquer relação com o blog, para qualquer contato:
        \nvdsantiago1@gmail.com
        \n\nGostou? Avalie o App no Google Play!</string>
    <string name="image_folder_name" translatable="false">LeNinja Imagens</string>
    <string name="image_prefix" translatable="false">LN_</string>
    <string name="fb_page_link" translatable="false">https://www.facebook.com/AppsAleatorios</string>
    <string name="patrocinated_cateogry" translatable="false"></string>
    <string name="admob_app_id" translatable="false"></string>
    <string name="native_ad_unit_id" translatable="false"></string>
    <string name="post_footer_remove" translatable="false">The post(.*)Le Ninja</string>
    <string name="app_tracking" translatable="false">UA-38018123-8</string>
    <string name="global_tracking" translatable="false">UA-38018123-19</string>
    <!--Native ad template: L003-->
    <!--Width: 280–1200 dp-->
    <!--Height: 250–1200 dp-->
    <!-- CHANGE THESE STRINGS TO CUSTOMIZE EACH APP -->

    <string name="new_posts_synced">There are new posts!</string>

    <!-- PublicationList -->
    <string name="double_press_to_exit">Press again to exit</string>

    <string name="synchronizing">Synchronizing&#8230;</string>

    <!-- PublicationAdapter -->
    <string name="hours_ago"> hours ago</string>
    <string name="days_ago"> days ago</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>


    <string name="title_activity_settings">Settings</string>

    <!-- Drawer Menu -->
    <string name="action_home">Home</string>
    <string name="action_about">About</string>
    <string name="action_rate_app">Rate this app</string>
    <string name="action_more_apps">More apps</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="categories">Categories</string>
    <string name="fb_link" translatable="false">Facebook</string>


    <!-- Strings related to Settings -->
    <!-- Publication Fragment Settings -->
    <string name="share_option">Share</string>
    <string name="comments_option">View comments</string>
    <string name="view_on_web_option">View on web</string>

    <!-- Publication settings (general) -->
    <string name="pref_header_general">Publications</string>

    <string name="pref_title_publicity">Marketing posts</string>
    <string name="pref_description_publicity">Shows posts tagged as Marketing content
        (Works only if it\'s properly tagged)</string>

    <string name="pref_title_new_post_notification">Notify about new posts</string>
    <string name="pref_description_new_post_notification">Sends you a notification when
        synchronization is done, and there are new posts.</string>

    <!-- Fragment ViewImage -->
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="image_saved">Image saved successfully</string>
    <string name="failed_to_save">Failed to save image</string>
    <string name="share_image">Share image</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_mobile_data">Use mobile data</string>
    <string name="pref_description_mobile_data">Uses your mobile data plan to synchronize posts on
        background. (Recommended: OFF)</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>6</item>
        <item>12</item>
    </string-array>

    <string name="pref_title_sync_keep_up_to">Keep up to</string>
    <string-array name="pref_sync_keep_up_to_titles">
        <item>250 posts</item>
        <item>500 posts</item>
        <item>1000 posts</item>
        <item>Unlimited</item>
    </string-array>
    <string-array name="pref_sync_keep_up_to_values">
        <item>250</item>
        <item>500</item>
        <item>1000</item>
        <item>-1</item>
    </string-array>

</resources>