<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_information"
            android:title="@string/action_about" />

        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_menu_rate_app"
            android:title="@string/action_rate_app" />

        <item
            android:id="@+id/nav_more_apps"
            android:icon="@drawable/ic_menu_more_apps"
            android:title="@string/action_more_apps" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="Share" />

        <item
            android:id="@+id/nav_fb_link"
            android:icon="@drawable/ic_internet"
            android:title="@string/fb_link" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
    </group>

    <item
        android:id="@+id/nav_menu_categories"
        android:title="@string/categories"
        android:checkable="false">

        <menu>

            <!-- CATEGORY ITEMS GO HERE -->

        </menu>

    </item>

</menu>
